// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/Header renders header correctly when authenticated: DropDownMenu 1`] = `
Array [
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Planning
    </a>
  </DropdownToggle>,
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Reporting
    </a>
  </DropdownToggle>,
]
`;

exports[`components/page/Header renders header correctly when authenticated: Dropdown 1`] = `
Array [
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Planning
    </a>
  </DropdownToggle>,
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Reporting
    </a>
  </DropdownToggle>,
]
`;

exports[`components/page/Header renders header correctly when authenticated: home 1`] = `
<a
  aria-current="page"
  className="nav-link active active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  Home
</a>
`;

exports[`components/page/Header renders header correctly when authenticated: logout link 1`] = `
<a
  aria-current={null}
  className="nav-link"
  href="/logout"
  onClick={[Function]}
>
  Sign Out
</a>
`;

exports[`components/page/Header renders header correctly when authenticated: reveal logo 1`] = `
<Link
  className="navbar-brand"
  replace={false}
  to="/"
>
  <a
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="Reveal"
      src="logo.png"
    />
  </a>
</Link>
`;

exports[`components/page/Header renders header correctly when authenticated: users and about 1`] = `
Array [
  <a
    aria-current={null}
    className="nav-link"
    href="/404"
    onClick={[Function]}
  >
    Users
  </a>,
  <a
    aria-current={null}
    className="nav-link"
    href="/404"
    onClick={[Function]}
  >
    About
  </a>,
]
`;

exports[`components/page/Header renders header correctly: DropDownMenu 1`] = `
Array [
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Planning
    </a>
  </DropdownToggle>,
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Reporting
    </a>
  </DropdownToggle>,
]
`;

exports[`components/page/Header renders header correctly: Dropdown 1`] = `
Array [
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Planning
    </a>
  </DropdownToggle>,
  <DropdownToggle
    aria-haspopup={true}
    caret={true}
    className="nav-link"
    color="secondary"
    nav={true}
  >
    <a
      aria-expanded={false}
      aria-haspopup={true}
      className="nav-link dropdown-toggle nav-link"
      href="#"
      onClick={[Function]}
    >
      Reporting
    </a>
  </DropdownToggle>,
]
`;

exports[`components/page/Header renders header correctly: home 1`] = `
<a
  aria-current="page"
  className="nav-link active active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  Home
</a>
`;

exports[`components/page/Header renders header correctly: login link 1`] = `
<a
  aria-current={null}
  className="nav-link"
  href="/login"
  onClick={[Function]}
>
  Login
</a>
`;

exports[`components/page/Header renders header correctly: reveal logo 1`] = `
<Link
  className="navbar-brand"
  replace={false}
  to="/"
>
  <a
    className="navbar-brand"
    href="/"
    onClick={[Function]}
  >
    <img
      alt="Reveal"
      src="logo.png"
    />
  </a>
</Link>
`;

exports[`components/page/Header renders header correctly: users and about 1`] = `
Array [
  <a
    aria-current={null}
    className="nav-link"
    href="/404"
    onClick={[Function]}
  >
    Users
  </a>,
  <a
    aria-current={null}
    className="nav-link"
    href="/404"
    onClick={[Function]}
  >
    About
  </a>,
]
`;
